--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+:root {
+  --color-primary-1: rgb(201, 167, 63);
+  --color-primary-2: rgb(207, 82, 82);
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  font-size: 62.5%;
 }
