--- a/src/react/App.css
+++ b/src/react/App.css
@@ -1,4 +1,5 @@
-.robot__heading {
+.app__heading {
+  font-family: impact;
   text-align: center;
   background-image: linear-gradient( rgb(201, 167, 63),
     rgb(207, 82, 82));
