--- a/src/react/components/card/Card.css
+++ b/src/react/components/card/Card.css
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
 }
 
 .card:first-child {
@@ -27,4 +28,12 @@
 .card img {
   width: 100%;
   margin-bottom: 2rem;
+}
+
+.card__name {
+  font-size: 2.4rem;
+}
+
+.card__email {
+  font-size: 2rem;
 }
